--- a/style/style.css
+++ b/style/style.css
@@ -34,10 +34,6 @@ h5{
 	width: 400px;
 }
 
-#center {
-	text-align: center;
-}
-
 #tasksTable{
 	border-spacing: 0;
   
@@ -50,3 +46,10 @@ h5{
 	border-top: 1px solid #cdcdcd;
 }
 
+.center{
+	text-align: center;
+}
+
+.center form{
+	margin: 0;
+}
